# squirrel-debug-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  Folder.DotSettings_  main.cpp  readme.md
.github/workflows/: cmake.yml
embedded_server/: AppComponents.cpp  AppComponents.h  CMakeLists.txt  EmbeddedServer.cpp  Endpoint.h  ForwardingLogger.cpp  ForwardingLogger.h  ListenerConfig.h  Logger.cpp  Logger.h  RequestErrorHandler.h  SwaggerComponent.h
embedded_server/controller/: DebugCommandController.h  StaticController.h  WebsocketController.h
embedded_server/dto/: EventDto.h
embedded_server/include/sdb/: EmbeddedServer.h
embedded_server/websocket/: WSListener.cpp  WSListener.h
interfaces/: CMakeLists.txt
interfaces/include/sdb/: LogInterface.h  MessageInterface.h
sample_app/: CMakeLists.txt  Endpoint.cpp  Endpoint.h  SwaggerComponent.h  main.cpp
sample_app/controller/: TestAppController.h
sample_app/debug-server/: Endpoint.cpp  Endpoint.h  MessageInterface.h  SwaggerComponent.h
sample_app/debug-server/controller/: TestAppController.h
sample_app/debug-server/dto/: EventDto.h
sample_app/debug-server/websocket/: WSListener.cpp  WSListener.h
sample_app/debugger/: QuirrelDebugger.cpp  QuirrelDebugger.h
sample_app/scripts/: hello_world.nut
scripts/: hello_world.nut
squirrel_debugger/: BreakpointMap.cpp  BreakpointMap.h  CMakeLists.txt  SquirrelDebugger.cpp  SquirrelVmHelpers.cpp  SquirrelVmHelpers.h
squirrel_debugger/include/sdb/: SquirrelDebugger.h
squirrel_debugger/tests/: CMakeLists.txt  DebuggerTestUtils.cpp  DebuggerTestUtils.h  test.nut  testmain.cpp
vscode-extension/: package.json
vscode-extension/src/: activateSquidDebug.ts  debugAdapter.ts  extension.ts  squidDebug.ts  squidDto.ts  squidRuntime.ts
